--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,13 +3,13 @@
     <span class="first">Credit</span>
     <span class="second">Manager</span>
   </span>
+    <button class="router-button" mat-button routerLink="/users">
+        <span class="button-text" fxLayoutAlign="center center">Користувачі</span>
+    </button>
   <button class="router-button" mat-button routerLink="/credits">
     <span class="button-text" fxLayoutAlign="center center">Кредити</span>
   </button>
   <button class="router-button" mat-button routerLink="/banks">
     <span class="button-text" fxLayoutAlign="center center">Банки</span>
-  </button>
-  <button class="new-button" mat-button>
-    <span class="new-button-text">Додати</span>
   </button>
 </mat-toolbar>
