--- a/src/app/banks/banks.component.html
+++ b/src/app/banks/banks.component.html
@@ -1,5 +1,53 @@
-<div class="page">
-  <table mat-table>
+<div class="table-container">
+    <div fxLayout="row" fxLayoutAlign=" center">
+        <mat-form-field appearance="fill" fxFlex>
+            <mat-label>Пошук</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Пошук банків">
+        </mat-form-field>
+        <div class="button-container" fxFlexOffset="5">
+            <button mat-raised-button color="primary" (click)="openAddBankDialog()">Добавити новий банк</button>
+        </div>
+    </div>
+    <table mat-table [dataSource]="dataSource" (matSortChange)="sortData($event)" matSort class="mat-elevation-z8">
+        <!-- Define columns as needed -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>id</th>
+            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        </ng-container>
 
-  </table>
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Назва</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="owner">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Власник</th>
+            <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="address">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Адреса</th>
+            <td mat-cell *matCellDef="let element">{{ element.address }}</td>
+        </ng-container>
+        <ng-container matColumnDef="website">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Вебсайт</th>
+            <td mat-cell *matCellDef="let element">{{ element.website }}</td>
+        </ng-container>
+        <ng-container matColumnDef="maxLimit">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Максимальний ліміт</th>
+            <td mat-cell *matCellDef="let element">{{ element.maxLimit | currency: 'UAH':'symbol-narrow' }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="clickable-row"
+            (click)="goToBank(row.id)"></tr>
+    </table>
+
+    <mat-paginator
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            (page)="handlePageEvent($event)"
+            [pageSize]="bankService.pageSize$ | async"
+            [length]="bankService.totalElements$ | async"
+            [pageIndex]="bankService.currentPage$ | async">
+    </mat-paginator>
 </div>
