--- a/src/app/credits/credits.component.html
+++ b/src/app/credits/credits.component.html
@@ -1,36 +1,50 @@
-<div class="page">
-  <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> № </th>
-      <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-    </ng-container>
+<div class="table-container">
+    <div fxLayout="row" fxLayoutAlign=" center">
+        <mat-form-field appearance="fill" fxFlex>
+            <mat-label>Пошук</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Пошук кредитів">
+        </mat-form-field>
+    </div>
+    <table mat-table [dataSource]="dataSource" (matSortChange)="sortData($event)" matSort class="mat-elevation-z8">
+        <!-- Define columns as needed -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>id</th>
+            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> ПІБ </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Назва</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="bank">
-      <th mat-header-cell *matHeaderCellDef> Банк </th>
-      <td mat-cell *matCellDef="let element"> {{element.bank}} </td>
-    </ng-container>
+        <ng-container matColumnDef="maxSum">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Сума кредиту</th>
+            <td mat-cell *matCellDef="let element">{{ element.maxSum }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="sum">
-      <th mat-header-cell *matHeaderCellDef> Сума </th>
-      <td mat-cell *matCellDef="let element"> {{element.sum}} </td>
-    </ng-container>
+        <ng-container matColumnDef="commission">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Комісія</th>
+            <td mat-cell *matCellDef="let element">{{ element.commission }}</td>
+        </ng-container>
+        <ng-container matColumnDef="contractTerm">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Термін</th>
+            <td mat-cell *matCellDef="let element">{{ element.contractTerm }}</td>
+        </ng-container>
+        <ng-container matColumnDef="bankName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Банк</th>
+            <td mat-cell *matCellDef="let element">{{ element.bankName }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="percent">
-      <th mat-header-cell *matHeaderCellDef> Відсоток </th>
-      <td mat-cell *matCellDef="let element"> {{element.percent}} </td>
-    </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="clickable-row"
+            (click)="goToCredit(row.id)"></tr>
+    </table>
 
-    <ng-container matColumnDef="term">
-      <th mat-header-cell *matHeaderCellDef> Термін </th>
-      <td mat-cell *matCellDef="let element"> {{element.term}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+    <mat-paginator
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            (page)="handlePageEvent($event)"
+            [pageSize]="creditService.pageSize$ | async"
+            [length]="creditService.totalElements$ | async"
+            [pageIndex]="creditService.currentPage$ | async">
+    </mat-paginator>
 </div>
